feature: add all api user and update swapgger, validation
